package org.binu.board;

/**
 * BlockQueue with cells.
 */
public class BlockQueue {
    Block[] blocks;
}
