@startuml

hide empty fields
hide empty method

class GameManager {
    - Board board
    - GameAI gameAI
    - BlockQueue[] BlockQueue;
}

class BlockQueue {
    - Blocks[] block
}

class Block {
    - Cells[] cells
}
interface IGameAI {
    + scorePossibleMoves()
    + calculateNextMove()
}
abstract class GameAI extends IGameAI {
    - Aggression aggression
}

class A-GameAI extends GameAI {

}

class B-GameAI extends GameAI {

}

enum Aggression {
    PASSIVE
    BLOCKED
    NEUTRAL
    GREEDY
}

GameAI ..r> Aggression
GameManager --r> GameAI
GameManager --> BlockQueue
BlockQueue --> Block
@enduml